==============
AS OF 20230411
==============

- Fecthes returning zero samples do not generate warnings.

==============
AS OF 20230202
==============

- GetStreamShankMap can only be used on NI stream (js = 0) because imec
ShankMaps are for internal use only. They will be replaced by geomMap.

- "Onebox" -> "OneBox"

==============
AS OF 20220101
==============

- Add 'LatencyTest.m' demo file.

- Retire 32-bit MATLAB support.

- Streamline CalinsNetMex.

- Simplify error handling.

- Users must reinstall @SpikeGL and CalinsNetMex.mexw64.

- Formerly streams were referenced by the single parameter streamID: {-1=nidq, 0+=imec-probe}.
Henceforth two parameters (js, ip) are used to select an expanded variety of streams:
- js: stream type: {0=nidq, 1=obx, 2=imec-probe}.
- ip: substream:   {0=nidq (if js=0), 0+=which OneBox or imec probe}.
Examples (js, ip):
(0, 0) = nidq.	// for nidq, ip is arbitrary but zero by convention
(1, 4) = obx4.
(2, 7) = imec7.
Note: ip has range [0..np-1], where, np is queried using GetStreamNP().

Affected functions
------------------
Fetch
FetchLatest
GetAcqChanCounts ->  GetStreamAcqChans
GetFileStartCount -> GetStreamFileStart
GetImProbeCount ->   GetStreamNP
GetImProbeSN ->      GetStreamSN
GetImVoltageRange -> GetStreamVoltageRange
GetSampleRate ->     GetStreamSampleRate
GetSaveChans ->      GetStreamSaveChans
GetScanCount ->      GetStreamSampleCount
IsUserOrder
MapSample

New functions
-------------
GetImecChanGains
GetParamsImecCommon
SetParamsImecCommon
GetParamsImecProbe
SetParamsImecProbe
GetParamsOneBox
SetParamsOneBox
GetStreamI16ToVolts
GetStreamMaxInt
GetStreamShankMap

Old -> New function replacements
--------------------------------
SetMetaData -> SetMetadata

Changed behavior
----------------
Fetch,
FetchLatest -> default channel subset is all_acquired, rather than all_saved.

Opto functions
--------------
Opto_getAttenuations
Opto_emit


==============
AS OF 20200309
==============

New functions
-------------