@@ -267,6 +267,17 @@
 %
 %     Progress is reported to the command window.
 %
+% myobj = SetAnatomy_Pinpoint( myobj, 'shankdat' )
+%
+%     Set anatomy data string with Pinpoint format:
+%     [probe-id,shank-id](startpos,endpos,R,G,B,rgnname)(startpos,endpos,R,G,B,rgnname)…()
+%        - probe-id: SpikeGLX logical probe id.
+%        - shank-id: [0..n-shanks].
+%        - startpos: region start in microns from tip.
+%        - endpos:   region end in microns from tip.
+%        - R,G,B:    region color as RGB, each [0..255].
+%        - rgnname:  region name text.
+%
 % myobj = SetAudioEnable( myobj, bool_flag )
 %
 %     Set audio output on/off. Note that this command has
